--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-redux": "^8.0.0",
+    "redux": "4.1.2",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
