--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-screens": "^3.13.1",
     "react-redux": "^8.0.0",
     "redux": "4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
