--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.68.1",
     "react-native-image-slider-box": "^1.1.22",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-redux": "^8.0.0",
