--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-fast-image": "^8.5.11",
     "react-native-image-slider-box": "^1.1.22",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
