--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-toast-message": "^2.1.5",
     "react-redux": "^8.0.0",
     "redux": "4.1.2",
     "redux-logger": "^3.0.6",
